k8s/comment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-node-port
spec:
  type: NodePort
  selector:
    app: comment
  ports:
    - port: 4001
      targetPort: 4001
      nodePort: 30001

---
# ClusterIP service
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: comment
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP
