k8s/moderation_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - port: 4003
      targetPort: 4003
      protocol: TCP
