k8s/query_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
      protocol: TCP
